# AURO

./: AURO Assessment Notes.txt  Auro Assessment Document.txt  README.md  data_log_0.csv
AURO/: .gitignore  README.md  package.xml
AURO/assessment/: README.md  setup.py
AURO/assessment/assessment/: collision_detector.py  item_manager.py  item_sensor.py  lidar_sensor.py  priority_manager.py  robot_controller.py  robot_sensor.py  zone_sensor.py
AURO/assessment/launch/: assessment_launch.py
AURO/assessment_interfaces/: CMakeLists.txt
AURO/assessment_interfaces/msg/: Zone.msg
AURO/auro_interfaces/: CMakeLists.txt
AURO/models/assessment_world/: model.config
AURO/models/item/: model.config
AURO/params/: nav2_params_namespaced.yaml
AURO/solution/config/: initial_poses.yaml
AURO/week_1/: package.xml  setup.py
AURO/week_1/week_1/: turtle_controller.py  turtle_listener.py
AURO/week_2/: package.xml  setup.py
AURO/week_2/launch/: joint_launch.py
AURO/week_2/week_2/: turtlebot3_drive_python.py
AURO/week_3/: package.xml  setup.py
AURO/week_3/launch/: turtlebot3_simulation_launch.py
AURO/week_3/robochart/: .project  main.assertions  main.rct  representations.aird
AURO/week_3/week_3/: rviz_text_marker.py  turtlebot3_fsm.py  turtlebot3_fsm_rc.py  turtlebot3_random_walk.py
AURO/week_4/: README.md  package.xml  setup.py
AURO/week_4/launch/: week_4_launch.py  (+1 more)
AURO/week_5/: package.xml  setup.py
AURO/week_6/: package.xml  setup.py
AURO/week_7/: package.xml  setup.py
AURO/week_8/: package.xml  setup.py
AURO/worlds/: assessment_world.world
(+557 files in other folders)
